Práctica 5v2/src/gramatica.output
Rules useless in parser due to conflicts

   42 $@10: %empty


State 173 conflicts: 1 reduce/reduce


Grammar

    0 $accept: Programa $end

    1 $@1: %empty

    2 $@2: %empty

    3 Programa: $@1 MAIN $@2 bloque

    4 $@3: %empty

    5 bloque: BLOCK_START $@3 bloque_in BLOCK_END

    6 bloque_in: Declar_de_variables_locales Declar_de_subprogs Sentencias
    7          | Declar_de_variables_locales Declar_de_subprogs

    8 Declar_de_subprogs: Declar_de_subprogs Declar_subprog
    9                   | %empty

   10 $@4: %empty

   11 Declar_subprog: Cabecera_subprograma $@4 bloque

   12 $@5: %empty

   13 Declar_de_variables_locales: BEGIN_LOCAL $@5 Variables_locales END_LOCAL
   14                            | %empty

   15 Variables_locales: Variables_locales Cuerpo_declar_variables
   16                  | Cuerpo_declar_variables

   17 $@6: %empty

   18 Cuerpo_declar_variables: tipo $@6 lista_variables COLON
   19                        | error

   20 $@7: %empty

   21 Cabecera_subprograma: tipo IDENTIFIER $@7 PARENT_START lista_de_parametros PARENT_END

   22 lista_de_parametros: lista_de_parametros COMMA tipo IDENTIFIER
   23                    | tipo IDENTIFIER
   24                    | %empty
   25                    | error

   26 $@8: %empty

   27 Sentencias: Sentencias $@8 Sentencia

   28 $@9: %empty

   29 Sentencias: $@9 Sentencia

   30 Sentencia: bloque
   31          | Sentencia_asignacion
   32          | Sentencia_if
   33          | Sentencia_while
   34          | Sentencia_entrada
   35          | Sentencia_salida
   36          | Sentencia_return
   37          | Sentencia_for
   38          | Sentencia_lista

   39 Sentencia_asignacion: IDENTIFIER ASSIGN expresion COLON

   40 aux: %empty

   41 Sentencia_if: IF PARENT_START expresion PARENT_END aux Sentencia

   42 $@10: %empty

   43 $@11: %empty

   44 Sentencia_if: IF PARENT_START expresion PARENT_END aux Sentencia $@10 ELSE $@11 Sentencia

   45 $@12: %empty

   46 $@13: %empty

   47 Sentencia_while: WHILE PARENT_START $@12 expresion $@13 PARENT_END Sentencia

   48 Sentencia_entrada: INPUT lista_variables COLON

   49 Sentencia_salida: OUTPUT Lista_expresiones_o_cadena COLON

   50 @14: %empty

   51 Sentencia_return: RETURN expresion @14 COLON

   52 $@15: %empty

   53 $@16: %empty

   54 Sentencia_for: FOR IDENTIFIER ASSIGN expresion $@15 TO expresion $@16 STEP expresion Sentencia

   55 Sentencia_lista: IDENTIFIER OP_LIST COLON
   56                | DOLLAR IDENTIFIER COLON

   57 expresion: OP_UNARY_NEG expresion
   58          | OP_UNARY_COUNT expresion
   59          | OP_UNARY_QUEST expresion
   60          | PLUS_PLUS expresion
   61          | MINUS_MINUS expresion
   62          | expresion PLUS_MINUS expresion
   63          | PLUS_MINUS expresion
   64          | expresion OP_BINARY_MUL expresion
   65          | expresion OP_BINARY_AND expresion
   66          | expresion OP_BINARY_OR expresion
   67          | expresion OP_BINARY_REL expresion
   68          | expresion OP_BINARY_EQ expresion
   69          | expresion AT expresion
   70          | expresion MINUS_MINUS expresion
   71          | IDENTIFIER
   72          | constante
   73          | funcion
   74          | expresion PLUS_PLUS expresion AT expresion
   75          | PARENT_START expresion PARENT_END
   76          | error

   77 funcion: cabecera_funcion argumentos_funcion

   78 cabecera_funcion: IDENTIFIER PARENT_START

   79 argumentos_funcion: Lista_expresiones PARENT_END
   80                   | PARENT_END

   81 Lista_expresiones_o_cadena: Lista_expresiones_o_cadena COMMA expresion
   82                           | Lista_expresiones_o_cadena COMMA STRING
   83                           | expresion
   84                           | STRING

   85 constante: constante_base
   86          | constante_lista

   87 constante_base: CONST_INT
   88               | CONST_FLOAT
   89               | CONST_BOOL
   90               | CONST_CHAR

   91 constante_lista: BRACKET_START constante_lista_int BRACKET_END
   92                | BRACKET_START constante_lista_float BRACKET_END
   93                | BRACKET_START constante_lista_bool BRACKET_END
   94                | BRACKET_START constante_lista_char BRACKET_END

   95 constante_lista_int: constante_lista_int COMMA CONST_INT
   96                    | CONST_INT

   97 constante_lista_float: constante_lista_float COMMA CONST_FLOAT
   98                      | CONST_FLOAT

   99 constante_lista_bool: constante_lista_bool COMMA CONST_BOOL
  100                     | CONST_BOOL

  101 constante_lista_char: constante_lista_char COMMA CONST_CHAR
  102                     | CONST_CHAR

  103 Lista_expresiones: Lista_expresiones COMMA expresion
  104                  | expresion

  105 tipo: TYPE
  106     | LIST_OF TYPE

  107 lista_variables: lista_variables COMMA IDENTIFIER
  108                | IDENTIFIER
  109                | lista_variables error IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    error (256) 19 25 76 109
    MAIN (258) 3
    PARENT_END (259) 21 41 44 47 75 79 80
    BLOCK_START (260) 5
    BLOCK_END (261) 5
    BRACKET_START (262) 91 92 93 94
    BRACKET_END (263) 91 92 93 94
    COLON (264) 18 39 48 49 51 55 56
    COMMA (265) 22 81 82 95 97 99 101 103 107
    ASSIGN (266) 39 54
    IF (267) 41 44
    ELSE (268) 44
    WHILE (269) 47
    RETURN (270) 51
    FOR (271) 54
    TO (272) 54
    STEP (273) 54
    OUTPUT (274) 49
    INPUT (275) 48
    BEGIN_LOCAL (276) 13
    END_LOCAL (277) 13
    LIST_OF (278) 106
    TYPE (279) 105 106
    STRING (280) 82 84
    AT (281) 69 74
    OP_BINARY_OR (282) 66
    OP_BINARY_AND (283) 65
    OP_BINARY_EQ (284) 68
    OP_BINARY_REL (285) 67
    PLUS_MINUS (286) 62 63
    OP_BINARY_MUL (287) 64
    OP_UNARY_NEG (288) 57
    OP_UNARY_COUNT (289) 58
    OP_UNARY_QUEST (290) 59
    MINUS_MINUS (291) 61 70
    PLUS_PLUS (292) 60 74
    DOLLAR (293) 56
    OP_LIST (294) 55
    CONST_INT (295) 87 95 96
    CONST_FLOAT (296) 88 97 98
    CONST_BOOL (297) 89 99 100
    CONST_CHAR (298) 90 101 102
    IDENTIFIER (299) 21 22 23 39 54 55 56 71 78 107 108 109
    PARENT_START (300) 21 41 44 47 75 78


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    Programa (47)
        on left: 3
        on right: 0
    $@1 (48)
        on left: 1
        on right: 3
    $@2 (49)
        on left: 2
        on right: 3
    bloque (50)
        on left: 5
        on right: 3 11 30
    $@3 (51)
        on left: 4
        on right: 5
    bloque_in (52)
        on left: 6 7
        on right: 5
    Declar_de_subprogs (53)
        on left: 8 9
        on right: 6 7 8
    Declar_subprog (54)
        on left: 11
        on right: 8
    $@4 (55)
        on left: 10
        on right: 11
    Declar_de_variables_locales (56)
        on left: 13 14
        on right: 6 7
    $@5 (57)
        on left: 12
        on right: 13
    Variables_locales (58)
        on left: 15 16
        on right: 13 15
    Cuerpo_declar_variables (59)
        on left: 18 19
        on right: 15 16
    $@6 (60)
        on left: 17
        on right: 18
    Cabecera_subprograma (61)
        on left: 21
        on right: 11
    $@7 (62)
        on left: 20
        on right: 21
    lista_de_parametros (63)
        on left: 22 23 24 25
        on right: 21 22
    Sentencias (64)
        on left: 27 29
        on right: 6 27
    $@8 (65)
        on left: 26
        on right: 27
    $@9 (66)
        on left: 28
        on right: 29
    Sentencia (67)
        on left: 30 31 32 33 34 35 36 37 38
        on right: 27 29 41 44 47 54
    Sentencia_asignacion (68)
        on left: 39
        on right: 31
    aux (69)
        on left: 40
        on right: 41 44
    Sentencia_if (70)
        on left: 41 44
        on right: 32
    $@10 (71)
        on left: 42
        on right: 44
    $@11 (72)
        on left: 43
        on right: 44
    Sentencia_while (73)
        on left: 47
        on right: 33
    $@12 (74)
        on left: 45
        on right: 47
    $@13 (75)
        on left: 46
        on right: 47
    Sentencia_entrada (76)
        on left: 48
        on right: 34
    Sentencia_salida (77)
        on left: 49
        on right: 35
    Sentencia_return (78)
        on left: 51
        on right: 36
    @14 (79)
        on left: 50
        on right: 51
    Sentencia_for (80)
        on left: 54
        on right: 37
    $@15 (81)
        on left: 52
        on right: 54
    $@16 (82)
        on left: 53
        on right: 54
    Sentencia_lista (83)
        on left: 55 56
        on right: 38
    expresion (84)
        on left: 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76
        on right: 39 41 44 47 51 54 57 58 59 60 61 62 63 64 65 66 67 68 69 70 74 75 81 83 103 104
    funcion (85)
        on left: 77
        on right: 73
    cabecera_funcion (86)
        on left: 78
        on right: 77
    argumentos_funcion (87)
        on left: 79 80
        on right: 77
    Lista_expresiones_o_cadena (88)
        on left: 81 82 83 84
        on right: 49 81 82
    constante (89)
        on left: 85 86
        on right: 72
    constante_base (90)
        on left: 87 88 89 90
        on right: 85
    constante_lista (91)
        on left: 91 92 93 94
        on right: 86
    constante_lista_int (92)
        on left: 95 96
        on right: 91 95
    constante_lista_float (93)
        on left: 97 98
        on right: 92 97
    constante_lista_bool (94)
        on left: 99 100
        on right: 93 99
    constante_lista_char (95)
        on left: 101 102
        on right: 94 101
    Lista_expresiones (96)
        on left: 103 104
        on right: 79 103
    tipo (97)
        on left: 105 106
        on right: 18 21 22 23
    lista_variables (98)
        on left: 107 108 109
        on right: 18 48 107 109


State 0

    0 $accept: . Programa $end

    $default  reduce using rule 1 ($@1)

    Programa  go to state 1
    $@1       go to state 2


State 1

    0 $accept: Programa . $end

    $end  shift, and go to state 3


State 2

    3 Programa: $@1 . MAIN $@2 bloque

    MAIN  shift, and go to state 4


State 3

    0 $accept: Programa $end .

    $default  accept


State 4

    3 Programa: $@1 MAIN . $@2 bloque

    $default  reduce using rule 2 ($@2)

    $@2  go to state 5


State 5

    3 Programa: $@1 MAIN $@2 . bloque

    BLOCK_START  shift, and go to state 6

    bloque  go to state 7


State 6

    5 bloque: BLOCK_START . $@3 bloque_in BLOCK_END

    $default  reduce using rule 4 ($@3)

    $@3  go to state 8


State 7

    3 Programa: $@1 MAIN $@2 bloque .

    $default  reduce using rule 3 (Programa)


State 8

    5 bloque: BLOCK_START $@3 . bloque_in BLOCK_END

    BEGIN_LOCAL  shift, and go to state 9

    $default  reduce using rule 14 (Declar_de_variables_locales)

    bloque_in                    go to state 10
    Declar_de_variables_locales  go to state 11


State 9

   13 Declar_de_variables_locales: BEGIN_LOCAL . $@5 Variables_locales END_LOCAL

    $default  reduce using rule 12 ($@5)

    $@5  go to state 12


State 10

    5 bloque: BLOCK_START $@3 bloque_in . BLOCK_END

    BLOCK_END  shift, and go to state 13


State 11

    6 bloque_in: Declar_de_variables_locales . Declar_de_subprogs Sentencias
    7          | Declar_de_variables_locales . Declar_de_subprogs

    $default  reduce using rule 9 (Declar_de_subprogs)

    Declar_de_subprogs  go to state 14


State 12

   13 Declar_de_variables_locales: BEGIN_LOCAL $@5 . Variables_locales END_LOCAL

    error    shift, and go to state 15
    LIST_OF  shift, and go to state 16
    TYPE     shift, and go to state 17

    Variables_locales        go to state 18
    Cuerpo_declar_variables  go to state 19
    tipo                     go to state 20


State 13

    5 bloque: BLOCK_START $@3 bloque_in BLOCK_END .

    $default  reduce using rule 5 (bloque)


State 14

    6 bloque_in: Declar_de_variables_locales Declar_de_subprogs . Sentencias
    7          | Declar_de_variables_locales Declar_de_subprogs .
    8 Declar_de_subprogs: Declar_de_subprogs . Declar_subprog

    LIST_OF  shift, and go to state 16
    TYPE     shift, and go to state 17

    BLOCK_END  reduce using rule 7 (bloque_in)
    $default   reduce using rule 28 ($@9)

    Declar_subprog        go to state 21
    Cabecera_subprograma  go to state 22
    Sentencias            go to state 23
    $@9                   go to state 24
    tipo                  go to state 25


State 15

   19 Cuerpo_declar_variables: error .

    $default  reduce using rule 19 (Cuerpo_declar_variables)


State 16

  106 tipo: LIST_OF . TYPE

    TYPE  shift, and go to state 26


State 17

  105 tipo: TYPE .

    $default  reduce using rule 105 (tipo)


State 18

   13 Declar_de_variables_locales: BEGIN_LOCAL $@5 Variables_locales . END_LOCAL
   15 Variables_locales: Variables_locales . Cuerpo_declar_variables

    error      shift, and go to state 15
    END_LOCAL  shift, and go to state 27
    LIST_OF    shift, and go to state 16
    TYPE       shift, and go to state 17

    Cuerpo_declar_variables  go to state 28
    tipo                     go to state 20


State 19

   16 Variables_locales: Cuerpo_declar_variables .

    $default  reduce using rule 16 (Variables_locales)


State 20

   18 Cuerpo_declar_variables: tipo . $@6 lista_variables COLON

    $default  reduce using rule 17 ($@6)

    $@6  go to state 29


State 21

    8 Declar_de_subprogs: Declar_de_subprogs Declar_subprog .

    $default  reduce using rule 8 (Declar_de_subprogs)


State 22

   11 Declar_subprog: Cabecera_subprograma . $@4 bloque

    $default  reduce using rule 10 ($@4)

    $@4  go to state 30


State 23

    6 bloque_in: Declar_de_variables_locales Declar_de_subprogs Sentencias .
   27 Sentencias: Sentencias . $@8 Sentencia

    BLOCK_END  reduce using rule 6 (bloque_in)
    $default   reduce using rule 26 ($@8)

    $@8  go to state 31


State 24

   29 Sentencias: $@9 . Sentencia

    BLOCK_START  shift, and go to state 6
    IF           shift, and go to state 32
    WHILE        shift, and go to state 33
    RETURN       shift, and go to state 34
    FOR          shift, and go to state 35
    OUTPUT       shift, and go to state 36
    INPUT        shift, and go to state 37
    DOLLAR       shift, and go to state 38
    IDENTIFIER   shift, and go to state 39

    bloque                go to state 40
    Sentencia             go to state 41
    Sentencia_asignacion  go to state 42
    Sentencia_if          go to state 43
    Sentencia_while       go to state 44
    Sentencia_entrada     go to state 45
    Sentencia_salida      go to state 46
    Sentencia_return      go to state 47
    Sentencia_for         go to state 48
    Sentencia_lista       go to state 49


State 25

   21 Cabecera_subprograma: tipo . IDENTIFIER $@7 PARENT_START lista_de_parametros PARENT_END

    IDENTIFIER  shift, and go to state 50


State 26

  106 tipo: LIST_OF TYPE .

    $default  reduce using rule 106 (tipo)


State 27

   13 Declar_de_variables_locales: BEGIN_LOCAL $@5 Variables_locales END_LOCAL .

    $default  reduce using rule 13 (Declar_de_variables_locales)


State 28

   15 Variables_locales: Variables_locales Cuerpo_declar_variables .

    $default  reduce using rule 15 (Variables_locales)


State 29

   18 Cuerpo_declar_variables: tipo $@6 . lista_variables COLON

    IDENTIFIER  shift, and go to state 51

    lista_variables  go to state 52


State 30

   11 Declar_subprog: Cabecera_subprograma $@4 . bloque

    BLOCK_START  shift, and go to state 6

    bloque  go to state 53


State 31

   27 Sentencias: Sentencias $@8 . Sentencia

    BLOCK_START  shift, and go to state 6
    IF           shift, and go to state 32
    WHILE        shift, and go to state 33
    RETURN       shift, and go to state 34
    FOR          shift, and go to state 35
    OUTPUT       shift, and go to state 36
    INPUT        shift, and go to state 37
    DOLLAR       shift, and go to state 38
    IDENTIFIER   shift, and go to state 39

    bloque                go to state 40
    Sentencia             go to state 54
    Sentencia_asignacion  go to state 42
    Sentencia_if          go to state 43
    Sentencia_while       go to state 44
    Sentencia_entrada     go to state 45
    Sentencia_salida      go to state 46
    Sentencia_return      go to state 47
    Sentencia_for         go to state 48
    Sentencia_lista       go to state 49


State 32

   41 Sentencia_if: IF . PARENT_START expresion PARENT_END aux Sentencia
   44             | IF . PARENT_START expresion PARENT_END aux Sentencia $@10 ELSE $@11 Sentencia

    PARENT_START  shift, and go to state 55


State 33

   47 Sentencia_while: WHILE . PARENT_START $@12 expresion $@13 PARENT_END Sentencia

    PARENT_START  shift, and go to state 56


State 34

   51 Sentencia_return: RETURN . expresion @14 COLON

    error           shift, and go to state 57
    BRACKET_START   shift, and go to state 58
    PLUS_MINUS      shift, and go to state 59
    OP_UNARY_NEG    shift, and go to state 60
    OP_UNARY_COUNT  shift, and go to state 61
    OP_UNARY_QUEST  shift, and go to state 62
    MINUS_MINUS     shift, and go to state 63
    PLUS_PLUS       shift, and go to state 64
    CONST_INT       shift, and go to state 65
    CONST_FLOAT     shift, and go to state 66
    CONST_BOOL      shift, and go to state 67
    CONST_CHAR      shift, and go to state 68
    IDENTIFIER      shift, and go to state 69
    PARENT_START    shift, and go to state 70

    expresion         go to state 71
    funcion           go to state 72
    cabecera_funcion  go to state 73
    constante         go to state 74
    constante_base    go to state 75
    constante_lista   go to state 76


State 35

   54 Sentencia_for: FOR . IDENTIFIER ASSIGN expresion $@15 TO expresion $@16 STEP expresion Sentencia

    IDENTIFIER  shift, and go to state 77


State 36

   49 Sentencia_salida: OUTPUT . Lista_expresiones_o_cadena COLON
